# claude_govenor

./: Plan.md  README.md
.claude/: settings.local.json
governor_mcp/: __init__.py  __main__.py  pyproject.toml  server.py
governor_mcp/classification/: __init__.py  action_classifier.py  patterns.py  resource_classifier.py
governor_mcp/core/: __init__.py  deviation_detector.py  plan_controller.py  risk_assessment.py
governor_mcp/state/: __init__.py  audit.py  models.py  session.py
governor_mcp/tools/: __init__.py  abort.py  approve.py  assess.py  execute.py  history.py  log.py  plan.py  status.py
