[project]
name = "governor-mcp"
version = "0.1.0"
description = "MCP server plugin that acts as a governor to bound AI agent behavior based on task risk levels"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["governor_mcp"]
